# df-assistants

./: .gitignore  README.md  converse.ipynb  openai_assistants.ipynb  pyproject.toml  requirements.txt
