[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "df-assistants"
version = "0.1.0"
description = "Your project description"
requires-python = ">=3.8"
dependencies = []  # Your dependencies will be read from requirements.txt

[tool.hatch.metadata]
allow-direct-references = true 